--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-admin-template",
+  "name": "lexunyoupro",
   "version": "3.6.0",
   "license": "MIT",
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "0.17.1",
+    "dropzone": "^5.4.0",
     "element-ui": "2.3.4",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
