--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "lexunyoupro",
-  "version": "3.6.0",
+  "version": "1.1.0",
   "license": "MIT",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
+  "description": "使用Vue开发的网站",
+  "author": "318368246@qq.com",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
